--- a/portfolio.html
+++ b/portfolio.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <!-- Header section -->
-    <header class="header">
-        <nav class="header-navigation">
+    <header class="header header-wrap">
+        <nav class="header-navigation navigation-wrap">
             <a class="header-logo link logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-            <ul class="header-list list">
+            <ul class="header-list list header-list-wrap">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Studio</a>
                 </li>
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <address class="header-address">
-            <ul class="header-address-list list">
+            <ul class="header-address-list list header-address-wrap">
                 <li><a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -43,7 +43,7 @@
     <main>
     <section>
         <h1 hidden>Projct Card</h1>
-        <ul class="filters-list list">
+        <ul class="filters-list list filters-wrap">
             <li class="filters-item">
                 <button class="filters-btn" type="button">All</button>
             </li>
@@ -60,7 +60,7 @@
                 <button class="filters-btn" type="button">Marketing</button>
             </li>
         </ul>
-        <ul class="project-card-list list">
+        <ul class="project-card-list list project-card-wrap">
             <li class="project-card-item">
                 <a class="link" href="">
                     <img class="project-card-img" src="./images/page-portfolio/img-1.jpg" alt="Banking App Interface" width="360"
