--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
     <!-- Header section -->
-   <header class="header">
-        <nav class="header-navigation">
+   <header class="header header-wrap">
+        <nav class="header-navigation navigation-wrap">
             <a class="header-logo link logo" href="./index.html">Web<span class="logo-studio">Studio</span></a>
-            <ul class="header-list list">
+            <ul class="header-list list header-list-wrap">
                 <li class="header-item">
                     <a class="header-link link" href="./index.html">Studio</a>
                 </li>
@@ -33,7 +33,7 @@
             </ul>
         </nav>
         <address class="header-address">
-            <ul class="header-address-list list">
+            <ul class="header-address-list list header-address-wrap">
                 <li><a class="header-contact link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li><a class="header-contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
             </ul>
@@ -49,7 +49,7 @@
     <section class="studio">
         <h2 class="studio-title" hidden
         >Studio</h2>
-        <ul class="studio-list list">
+        <ul class="studio-list list studio-wrap">
             <li class="studio-item">
                 <h3 class="studio-list-title undertitle">Strategy</h3>
                 <p class="studio-list-text">Our goal is to identify the business problem to walk away with the 
@@ -75,7 +75,7 @@
     <!-- Portfolio section -->
     <section class="portfolio">
         <h2 class="portfolio-title title">What are we doing</h2>
-        <ul class="portfolio-list list">
+        <ul class="portfolio-list list portfolio-wrap">
             <li class="portfolio-item">
                 <img class="portfolio-img" src="./images/portfolio/img-1.jpg" alt="research" width="360" height="300">
             </li>
@@ -88,9 +88,9 @@
         </ul>
     </section>
     <!-- Contacts section -->
-    <section class="contacts">
+    <section class="contacts contacts-wrap">
         <h2 class="contacts-title title">Our Team</h2>
-        <ul class="contacts-list list">
+        <ul class="contacts-list list contacts-list-wrap">
             <li class="contacts-item">
                 <img class="contacts-img" src="./images/contacts/img-4.jpg" alt="Mark Guerrero" width="264" height="260">
                 <h3 class="contacts-list-title undertitle">Mark Guerrero</h3>
@@ -117,7 +117,7 @@
     <!-- Footer section -->
    <footer class="footer">
     <a class="footer-logo link logo" href="./index.html">Web<span class="footer-logo-studio">Studio</span></a>
-    <p class="footer-text">Increase the flow of customers and sales for your business with
+    <p class="footer-text footer-wrap">Increase the flow of customers and sales for your business with
         digital marketing & growth solutions.</p>
    </footer>
 </body>
